Huge refactoring :)