@@ -9,10 +9,12 @@ import org.telegram.telegrambots.meta.api.objects.Message;
 import ru.liga.botstate.BotState;
 import ru.liga.client.cache.UserDetailsCache;
 import ru.liga.client.profile.ImageClient;
+import ru.liga.config.QueryData;
 import ru.liga.domain.Profile;
 import ru.liga.domain.ScrollingWrapper;
 import ru.liga.service.BotMethodService;
 import ru.liga.service.ProfileService;
+import ru.liga.service.TextMessageService;
 
 import java.io.File;
 import java.util.ArrayList;
@@ -28,10 +30,11 @@ public class FavoritesHandler implements InputHandler {
     private final ProfileService profileService;
     private final BotMethodService botMethodService;
     private final ImageClient imageClient;
+    private final TextMessageService textMessageService;
 
     @Override
     public List<PartialBotApiMethod<?>> handle(Message message) {
-        return Collections.emptyList();
+        return List.of(botMethodService.getDeleteMethod(message.getChatId(), message.getMessageId()));
     }
 
     @Override
@@ -42,13 +45,13 @@ public class FavoritesHandler implements InputHandler {
         log.info("User: {}, State: {}, Button: {}", userId, userDetailsCache.getCurrentBotState(userId), queryData);
         ScrollingWrapper scroller = userDetailsCache.getScroller(userId);
 
-        if ("DISLIKE".equals(queryData)) {
+        if (QueryData.DISLIKE.equals(queryData)) {
             Profile currentProfile = scroller.getCurrentProfile();
             profileService.unlikeProfile(userId, currentProfile.getId());
             return dislikeMethods(userId, scroller, callbackQuery);
-        } else if ("NEXT".equals(queryData)) {
+        } else if (QueryData.NEXT.equals(queryData)) {
             return nextMethods(userId, scroller, callbackQuery);
-        } else if ("PREV".equals(queryData)) {
+        } else if (QueryData.PREV.equals(queryData)) {
             return getPrevMethod(userId, scroller, callbackQuery);
         } else {
             userDetailsCache.changeUserState(userId, BotState.IN_MENU);
@@ -59,7 +62,6 @@ public class FavoritesHandler implements InputHandler {
 
     private List<PartialBotApiMethod<?>> getPrevMethod(Long userId, ScrollingWrapper scroller, CallbackQuery callbackQuery) {
         Profile profile;
-        File profileImage;
         if (scroller.isFirst()) {
             scroller = new ScrollingWrapper(profileService.getFavorites(userId));
             userDetailsCache.addScroller(userId, scroller);
@@ -70,11 +72,7 @@ public class FavoritesHandler implements InputHandler {
         } else {
             profile = scroller.getPrevProfile();
         }
-        profileImage = imageClient.getImageForProfile(profile);
-        Long chatId = callbackQuery.getMessage().getChatId();
-        Integer messageId = callbackQuery.getMessage().getMessageId();
-        return List.of(botMethodService.getDeleteMethod(chatId, messageId),
-                botMethodService.getSendPhotoMethod(profileImage, chatId, BotState.VIEWING, profile.getName()));
+        return getReply(userId, callbackQuery, profile);
     }
 
     private List<PartialBotApiMethod<?>> dislikeMethods(Long userId, ScrollingWrapper scroller, CallbackQuery callbackQuery) {
@@ -87,13 +85,13 @@ public class FavoritesHandler implements InputHandler {
 
     private List<PartialBotApiMethod<?>> nextMethods(Long userId, ScrollingWrapper scroller, CallbackQuery callbackQuery) {
         if (scroller.getSize() == 1) {
-            return Collections.singletonList(botMethodService.getPopUpMethod(callbackQuery, "Это единственная анкета!"));
+            return Collections.singletonList(botMethodService.getPopUpMethod(callbackQuery,
+                    textMessageService.getText("text.only.profile")));
         }
         return getNextMethod(userId, scroller, callbackQuery);
     }
 
     private List<PartialBotApiMethod<?>> getNextMethod(Long userId, ScrollingWrapper scroller, CallbackQuery callbackQuery) {
-        File profileImage;
         Profile profile;
         if (scroller.isLast()) {
             scroller = new ScrollingWrapper(profileService.getFavorites(userId));
@@ -105,18 +103,25 @@ public class FavoritesHandler implements InputHandler {
         } else {
             profile = scroller.getNextProfile();
         }
+        return getReply(userId, callbackQuery, profile);
+    }
+
+    private List<PartialBotApiMethod<?>> getReply(Long userId, CallbackQuery callbackQuery, Profile profile) {
+        File profileImage;
         profileImage = imageClient.getImageForProfile(profile);
         Long chatId = callbackQuery.getMessage().getChatId();
         Integer messageId = callbackQuery.getMessage().getMessageId();
+        String relation = profileService.getRelation(userId, profile.getId());
+        String caption = profile.getCaption() + ", " + relation;
         return List.of(botMethodService.getDeleteMethod(chatId, messageId),
-                botMethodService.getSendPhotoMethod(profileImage, chatId, BotState.VIEWING, profile.getName()));
+                botMethodService.getSendPhotoMethod(profileImage, chatId, BotState.VIEWING, caption));
     }
 
     private List<PartialBotApiMethod<?>> returnToMenu(Long userId, CallbackQuery callbackQuery) {
         Long chatId = callbackQuery.getMessage().getChatId();
         Integer messageId = callbackQuery.getMessage().getMessageId();
         List<PartialBotApiMethod<?>> methods = new ArrayList<>();
-        methods.add(botMethodService.getPopUpMethod(callbackQuery, "Не осталось избранных :("));
+        methods.add(botMethodService.getPopUpMethod(callbackQuery, textMessageService.getText("text.no.favorites")));
         userDetailsCache.changeUserState(userId, BotState.IN_MENU);
         methods.add(botMethodService.getDeleteMethod(chatId, messageId));
         methods.add(botMethodService.getMenuMethod(chatId));
