@@ -1,4 +1,4 @@
-package ru.liga.handler;
+package ru.liga.handler.menu;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
@@ -8,10 +8,13 @@ import org.telegram.telegrambots.meta.api.objects.Message;
 import ru.liga.botstate.BotState;
 import ru.liga.client.cache.UserDetailsCache;
 import ru.liga.client.profile.ImageClient;
+import ru.liga.config.QueryData;
 import ru.liga.domain.Profile;
 import ru.liga.domain.ScrollingWrapper;
+import ru.liga.handler.InputHandler;
 import ru.liga.service.BotMethodService;
 import ru.liga.service.ProfileService;
+import ru.liga.service.TextMessageService;
 
 import java.io.File;
 import java.util.ArrayList;
@@ -26,10 +29,11 @@ public class InMenuHandler implements InputHandler {
     private final ImageClient imageClient;
     private final BotMethodService botMethodService;
     private final ProfileService profileService;
+    private final TextMessageService textMessageService;
 
     @Override
     public List<PartialBotApiMethod<?>> handle(Message message) {
-        return Collections.emptyList();
+        return List.of(botMethodService.getDeleteMethod(message.getChatId(), message.getMessageId()));
     }
 
     @Override
@@ -39,21 +43,26 @@ public class InMenuHandler implements InputHandler {
         String data = callbackQuery.getData();
 
         switch (data) {
-            case "SEARCH":
+            case QueryData.SEARCH:
                 return getReply(profileService.getValidProfiles(userId), BotState.SEARCHING, callbackQuery);
-            case "FAVORITES":
+            case QueryData.FAVORITES:
                 return getReply(profileService.getFavorites(userId), BotState.VIEWING, callbackQuery);
             default:
                 Profile userProfile = profileService.getUserProfile(userId);
                 File imageForProfile = imageClient.getImageForProfile(userProfile);
                 return List.of(botMethodService.getDeleteMethod(chatId, callbackQuery.getMessage().getMessageId()),
-                        botMethodService.getSendPhotoMethod(imageForProfile, chatId, BotState.IN_MENU, userProfile.getName()));
+                        botMethodService.getSendPhotoMethod(imageForProfile, chatId, BotState.IN_MENU, userProfile.getCaption()));
         }
     }
 
     private List<PartialBotApiMethod<?>> getReply(List<Profile> list, BotState targetState, CallbackQuery callbackQuery) {
         List<PartialBotApiMethod<?>> methods = new ArrayList<>();
-        String popUpText = targetState == BotState.SEARCHING ? "Нет подходящих анкет :(" : "Нет избранных анкет :(";
+        String popUpText;
+        if (targetState == BotState.SEARCHING) {
+            popUpText = textMessageService.getText("text.no.search");
+        } else {
+            popUpText = textMessageService.getText("text.no.favorites");
+        }
         if (list.isEmpty()) {
             return Collections.singletonList(botMethodService.getPopUpMethod(callbackQuery, popUpText));
         }
@@ -62,7 +71,13 @@ public class InMenuHandler implements InputHandler {
         userDetailsCache.addScroller(callbackQuery.getFrom().getId(), searchScroller);
         Profile currentProfile = searchScroller.getCurrentProfile();
         File imageForProfile = imageClient.getImageForProfile(currentProfile);
-        methods.add(botMethodService.getSendPhotoMethod(imageForProfile, callbackQuery.getMessage().getChatId(), targetState, currentProfile.getName()));
+        String caption;
+        caption = currentProfile.getCaption();
+        if (targetState == BotState.VIEWING) {
+            String relation = profileService.getRelation(callbackQuery.getFrom().getId(), currentProfile.getId());
+            caption = caption + ", " + relation;
+        }
+        methods.add(botMethodService.getSendPhotoMethod(imageForProfile, callbackQuery.getMessage().getChatId(), targetState, caption));
         userDetailsCache.changeUserState(callbackQuery.getFrom().getId(), targetState);
         return methods;
     }
